# vamp

./: .gitignore  CMakeLists.txt
scripts/: ao_benchmark.py  flying_sphere.py  sphere_cage_example.py
scripts/cpp/: batched_cc.cc  batched_cc.cpp  device_test.cpp
src/impl/vamp/bindings/: common.hh  settings.cc
src/impl/vamp/metal/: metal_types.hh
src/impl/vamp/planning/: rrt.hh  rrt_settings.hh  rrt_star.hh  rrt_star_settings.hh
src/impl/vamp/robots/: panda.hh  sphere.hh
src/impl/vamp/robots/panda/: fk_gpu.hh  metal_types.hh  panda_cc.metal
src/impl/vamp/robots/sphere/: CollisionChecking.metallib  batch_cc.hh  cc.ir  cc.metal  fk.hh  metal_shapes.hh
src/impl/vamp/robots/sphere/capture_large.gputrace/: MTLBuffer-3-0  index  metadata  store0
src/impl/vamp/robots/sphere/capture_small.gputrace/: index  metadata  store0
src/vamp/: __init__.py  pybullet_interface.py
